Update ver to 1.2

--- a/templates/mail.liquid
+++ b/templates/mail.liquid
@@ -206,34 +206,34 @@
     </style>
 </head>
 <body>
-<div id="Facebook_Post__1">
-    <div id="Component_1__1" class="Component_1___1">
-        <img src="{{ qrcode_url }}" width="250" />
+    <div id="Facebook_Post__1">
+        <div id="Component_1__1" class="Component_1___1">
+            <img src="{{ qrcode_url }}" width="250" />
+        </div>
+        <div id="Formation_en_creation_de_site_">
+            <span>{{product_name}}</span>
+        </div>
+        <div id="sub-title">
+            <span>{{ sitename }}</span>
+        </div>
+        <div id="CODE_DE_SCURIT">
+            <span>CODE DE SéCURITé</span>
+        </div>
+        <div id="code" style="margin-bottom: 20px">
+            <span>{{code}}</span>
+        </div>
+        <div id="Nom_du_client">
+            <span>Nom du client</span>
+        </div>
+        <div id="Tiafeno_Finel">
+            <span>{{author_name}}</span>
+        </div>
+        <div id="MOntant_pay">
+            <span>Montant payé</span>
+        </div>
+        <div id="ID26__q">
+            <span>{{total_ttc}} {{ currency }}</span>
+        </div>
     </div>
-    <div id="Formation_en_creation_de_site_">
-        <span>{{product_name}}</span>
-    </div>
-    <div id="sub-title">
-        <span>{{ sitename }}</span>
-    </div>
-    <div id="CODE_DE_SCURIT">
-        <span>CODE DE SéCURITé</span>
-    </div>
-    <div id="code" style="margin-bottom: 20px">
-        <span>{{code}}</span>
-    </div>
-    <div id="Nom_du_client">
-        <span>Nom du client</span>
-    </div>
-    <div id="Tiafeno_Finel">
-        <span>{{author_name}}</span>
-    </div>
-    <div id="MOntant_pay">
-        <span>Montant payé</span>
-    </div>
-    <div id="ID26__q">
-        <span>{{total_ttc}}</span>
-    </div>
-</div>
 </body>
 </html>
