--- a/templates/former-details.liquid
+++ b/templates/former-details.liquid
@@ -53,55 +53,69 @@
     </div>
 </script>
 <script type="text/x-template" id="training-details">
-<div class="former-details">
-    <div class=""></div>
-    <router-link class="ui primary labeled icon button" :to="{name: 'FormerDetails'}">
-        <i class="chevron left icon"></i>
-        Retour
-    </router-link>
-    <div class="ui medium header" v-if="Product !== null">
-        ${Product.title.rendered}
+    <div class="former-details">
+        <div class=""></div>
+        <router-link class="ui primary labeled icon button" :to="{name: 'FormerDetails'}">
+            <i class="chevron left icon"></i>
+            Retour
+        </router-link>
+        <div class="ui medium header" v-if="Product !== null">
+            ${Product.title.rendered}
+        </div>
+        <table class="ui compact celled definition table">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Client</th>
+                    <th>Code</th>
+                    <th>Prix</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr v-for="item in items">
+                    <td class="collapsing">
+                        <div class="ui fitted slider checkbox">
+                            <form submit="return false" novalidate>
+                                <select name="month" v-model="filters.month">
+                                    <option value="">Mois</option>
+                                    <option v-for="(month, index) in Month" :value="index"> ${month} </option>
+                                </select>
+
+                                <select name="year" v-model="filters.month">
+                                    <option value="">Année</option>
+                                    <option v-for="(year, index) in Years" :value="index"> ${year} </option>
+                                </select>
+                                <button type="button" @click="filterDate($event)" class="ui small button">Trouver</button>
+                            </form>
+                        </div>
+                    </td>
+                    <td><b>${item.customer.first_name} ${item.customer.last_name}</b> - <i>${item.customer.email}</i></td>
+                    <td>${item.code}</td>
+                    <td><span v-html="item.totalTTC"></span><span> ${currency}</span></td>
+                    <td><a class="preview button" target="_blank" :href="item.order_url">Voir commande</a></td>
+                </tr>
+            </tbody>
+
+            <tfoot class="full-width">
+                <tr>
+                    <th></th>
+                    <th colspan="4">
+                        <div class="ui right floated small secondary  button">
+                            ${TotalTTC} ${currency}
+                        </div>
+                        <div class="ui small button">
+                            TOTAL TTC
+                        </div>
+                    </th>
+                </tr>
+            </tfoot>
+        </table>
+        <div>
+            
+        </div>
     </div>
-    <table class="ui compact celled definition table">
-        <thead>
-            <tr>
-                <th></th>
-                <th>Client</th>
-                <th>Code</th>
-                <th>Prix</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-
-        <tbody>
-            <tr v-for="item in items">
-                <td class="collapsing">
-                    <div class="ui fitted slider checkbox">
-                        <input type="checkbox"> <label></label>
-                    </div>
-                </td>
-                <td><b>${item.customer.first_name} ${item.customer.last_name}</b> - <i>${item.customer.email}</i></td>
-                <td>${item.code}</td>
-                <td><span v-html="item.totalTTC"></span><span> ${currency}</span></td>
-                <td><a class="preview button" target="_blank" :href="item.order_url">Voir commande</a></td>
-            </tr>
-        </tbody>
-
-        <tfoot class="full-width">
-            <tr>
-                <th></th>
-                <th colspan="4">
-                    <div class="ui right floated small secondary  button">
-                        ${TotalTTC} ${currency}
-                    </div>
-                    <div class="ui small button">
-                        TOTAL TTC
-                    </div>
-                </th>
-            </tr>
-        </tfoot>
-    </table>
-</div>
 </script>
 
 <div id="former-details-app">
