Add product link and description extern in mail template

--- a/templates/mail.liquid
+++ b/templates/mail.liquid
@@ -234,6 +234,18 @@
         <div id="ID26__q">
             <span>{{total_ttc}} {{ currency }}</span>
         </div>
+        <div id="MOntant_pay">
+            <span>Lien produit</span>
+        </div>
+        <div id="ID26__q">
+            <span><a href="{{ external_product_link }}" target="_blank">{{ external_product_link }}</a> </span>
+        </div>
+        <div id="MOntant_pay">
+            <span>Description</span>
+        </div>
+        <div id="ID26__q">
+            <span>{{ external_product_description }}</span>
+        </div>
     </div>
 </body>
 </html>
